release 1.0.2 (2009-01/02)
- Fixed issue 182
  https://jersey.dev.java.net/issues/show_bug.cgi?id=182
  The message of UniformInterfaceException is set to ClientResponse.toString()
  if no message is explicitly given. ClientResponse.toString() returns a String
  with the status code of the response.
- Fixed issue 150
  https://jersey.dev.java.net/issues/show_bug.cgi?id=150
  If no media type is declared with a client request of the Client API
  then an appropriate media type is derived from the Java type and the
  message body writers that support that Java type.
- Refactored Client API implementations for HttpURLConnection and the in-memory
  to leverage inherited classes for writing and reading HTTP requests and 
  responses. This makes it easier for other HTTP protocol implementations to 
  plugin and use the client API.
- Fixed issue 167
  https://jersey.dev.java.net/issues/show_bug.cgi?id=167
  A UniformInterfaceException will be thrown if the client requests an
  entity and the response status is 204.
- Fixed issue 170
  https://jersey.dev.java.net/issues/show_bug.cgi?id=170
  Encoding of ' ' in query parameters now round trips correctly.
     String encoded = UriComponent.encode(" ", Type.QUERY);
     assert(encoded.equals("%20"));
     String decoded = UriComponent.decode(encoded, Type.QUERY);
     assert(decoded.equals(" "));
  The encoding of ' ' to '+' now only occurs for Type.QUERY_PARAM.
     String encoded = UriComponent.encode(" ", Type.QUERY_PARAM);
     assert(encoded.equals("+"));
- Fixed issue 168
  https://jersey.dev.java.net/issues/show_bug.cgi?id=168
  Deprecated WebResource.getBuilder and renamed to WebResource.getUriBuilder().
  Added method WebResource.getRequestBuilder.  
- Fixed issue 165
  https://jersey.dev.java.net/issues/show_bug.cgi?id=165
  Clarified JavaDoc for ClientResponse.getProperties and
  ClientResponse.getMetadata()
- Fixed issues 153, 178
  https://jersey.dev.java.net/issues/show_bug.cgi?id=153